@@ -1,11 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl # Copy revision into the `configure' script
-AC_REVISION([$Id: configure.in,v 1.7 2004/06/07 22:13:21 rusfidogate Exp $])
+AC_REVISION([$Id: configure.in,v 1.8 2004/06/15 00:52:44 rusfidogate Exp $])
 dnl # Minimum Autoconf version required.
 AC_PREREQ(2.53)
 dnl # No comments...
-AC_INIT([fidogate],[5.1.1ds-rc4],[rusfidogate@users.sourceforge.net])
+AC_INIT([fidogate],[5.1.1ds-rc5],[rusfidogate@users.sourceforge.net])
 dnl # File to check from `configure' script
 AC_CONFIG_SRCDIR([src/common/config.c])
 dnl # Set automake and libtool scripts are in build directory
