@@ -1,6 +1,8 @@
 2004-06-15  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
-	* src/areafix/areafix.c: fix trap cmd_listall
+	* src/toss/runinc.c: add -c option, add mkdir
+	    tmpunpack if this dir not exist
+	* src/areafix/areafix.c: fix traping cmd_listall
 
 2004-06-11  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
